[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/maps/MapHighlights.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/GameCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/BattleGUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/MouseControl.gd" type="Script" id=4]
[ext_resource path="res://src/ui/BattleControl.gd" type="Script" id=5]

[node name="BattleControl" type="Node"]
script = ExtResource( 5 )

[node name="MapHighlights" parent="." instance=ExtResource( 1 )]

[node name="GameCamera" parent="." instance=ExtResource( 2 )]

[node name="MouseControl" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BattleGUI" parent="." instance=ExtResource( 3 )]
[connection signal="click" from="MouseControl" to="." method="_on_MouseControl_click"]
[connection signal="drag" from="MouseControl" to="." method="_on_MouseControl_drag"]
[connection signal="ability_cleared" from="BattleGUI" to="." method="_on_BattleGUI_ability_cleared"]
[connection signal="ability_selected" from="BattleGUI" to="." method="_on_BattleGUI_ability_selected"]
[connection signal="wait_started" from="BattleGUI" to="." method="_on_BattleGUI_wait_started"]
